// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SocialLinks /> calls social links with edit mode bio 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative mb-5"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        aria-labelledby="social-links-label"
        role="dialog"
      >
        <form
          aria-labelledby="editing-form"
        >
          <div
            class="editable-item-header mb-2"
          >
            <h2
              class="edit-section-header"
              id="social-links-label"
            >
              Social Links
            </h2>
          </div>
          <div
            id="social-error-feedback"
          />
          <ul
            class="list-unstyled"
          >
            <li
              class="form-group"
            >
              <label
                for="social-facebook"
              >
                Facebook
              </label>
              <input
                aria-describedby="social-error-feedback"
                class="form-control"
                id="social-facebook"
                name="facebook"
                type="text"
                value="https://www.facebook.com/aloha"
              />
            </li>
            <li
              class="form-group"
            >
              <label
                for="social-twitter"
              >
                Twitter
              </label>
              <input
                aria-describedby="social-error-feedback"
                class="form-control"
                id="social-twitter"
                name="twitter"
                type="text"
                value="https://www.twitter.com/ALOHA"
              />
            </li>
          </ul>
          <div
            class="d-flex flex-row-reverse flex-wrap justify-content-end align-items-center"
          >
            <div
              class="form-group d-flex flex-wrap"
            >
              <label
                class="col-form-label"
                for="visibilitySocialLinks"
              >
                Who can see this:
              </label>
              <span
                class="d-flex align-items-center"
              >
                <span
                  class="d-inline-block ml-1 mr-2"
                  style="width: 1.5rem;"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-eye-slash fa-w-20 "
                    data-icon="eye-slash"
                    data-prefix="far"
                    focusable="false"
                    role="img"
                    viewBox="0 0 640 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <select
                  class="d-inline-block form-control"
                  id="visibilitySocialLinks"
                  name="visibilitySocialLinks"
                  type="select"
                >
                  <option
                    value="private"
                  >
                    Just me
                  </option>
                  <option
                    value="all_users"
                  >
                    Everyone on localhost
                  </option>
                </select>
              </span>
            </div>
            <div
              class="form-group flex-shrink-0 flex-grow-1"
            >
              <button
                aria-disabled="false"
                aria-live="assertive"
                class="pgn__stateful-btn pgn__stateful-btn-state-pending btn btn-primary"
                type="submit"
              >
                <span
                  class="d-flex align-items-center justify-content-center"
                >
                  <span
                    class="pgn__stateful-btn-icon"
                  >
                    <span
                      class="pgn__icon icon-spin"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        focusable="false"
                        height="24"
                        role="img"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M22 12A10 10 0 1 1 6.122 3.91l1.176 1.618A8 8 0 1 0 20 12h2Z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Saving
                  </span>
                </span>
              </button>
              <button
                class="btn btn-link"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SocialLinks /> calls social links with edit mode certificates 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative mb-5"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="editable-item-header mb-2"
      >
        <h2
          class="edit-section-header"
        >
          Social Links
          <button
            class="float-right px-0 btn btn-link btn-sm"
            style="margin-top: -.35rem;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pencil-alt fa-w-16 mr-1"
              data-icon="pencil-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                fill="currentColor"
              />
            </svg>
            Edit
          </button>
        </h2>
        <p
          class="mb-0"
        >
          <span
            class="ml-auto small text-muted"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-eye-slash fa-w-20 "
              data-icon="eye-slash"
              data-prefix="far"
              focusable="false"
              role="img"
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
                fill="currentColor"
              />
            </svg>
             
            Just me
          </span>
        </p>
      </div>
      <ul
        class="list-unstyled"
      >
        <li
          class="form-group"
        >
          <a
            class="font-weight-bold"
            href="https://www.facebook.com/aloha"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-facebook fa-w-16 mr-2"
              data-icon="facebook"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                fill="currentColor"
              />
            </svg>
            Facebook
          </a>
        </li>
        <li
          class="form-group"
        >
          <a
            class="font-weight-bold"
            href="https://www.twitter.com/ALOHA"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter fa-w-16 mr-2"
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                fill="currentColor"
              />
            </svg>
            Twitter
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SocialLinks /> calls social links with edit mode goals 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative mb-5"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="editable-item-header mb-2"
      >
        <h2
          class="edit-section-header"
        >
          Social Links
        </h2>
      </div>
      <ul
        class="list-unstyled"
      >
        <li
          class="mb-4"
        >
          <div>
            <button
              class="pl-0 text-left btn btn-link"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus fa-w-14 fa-xs mr-2"
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  fill="currentColor"
                />
              </svg>
              Add Facebook
            </button>
          </div>
        </li>
        <li
          class="mb-4"
        >
          <div>
            <button
              class="pl-0 text-left btn btn-link"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus fa-w-14 fa-xs mr-2"
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  fill="currentColor"
                />
              </svg>
              Add Twitter
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SocialLinks /> calls social links with edit mode socialLinks 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative mb-5"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="editable-item-header mb-2"
      >
        <h2
          class="edit-section-header"
        >
          Social Links
          <button
            class="float-right px-0 btn btn-link btn-sm"
            style="margin-top: -.35rem;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pencil-alt fa-w-16 mr-1"
              data-icon="pencil-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                fill="currentColor"
              />
            </svg>
            Edit
          </button>
        </h2>
        <p
          class="mb-0"
        >
          <span
            class="ml-auto small text-muted"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-eye-slash fa-w-20 "
              data-icon="eye-slash"
              data-prefix="far"
              focusable="false"
              role="img"
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
                fill="currentColor"
              />
            </svg>
             
            Just me
          </span>
        </p>
      </div>
      <ul
        class="list-unstyled"
      >
        <li
          class="form-group"
        >
          <a
            class="font-weight-bold"
            href="https://www.facebook.com/aloha"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-facebook fa-w-16 mr-2"
              data-icon="facebook"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                fill="currentColor"
              />
            </svg>
            Facebook
          </a>
        </li>
        <li
          class="form-group"
        >
          <a
            class="font-weight-bold"
            href="https://www.twitter.com/ALOHA"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter fa-w-16 mr-2"
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                fill="currentColor"
              />
            </svg>
            Twitter
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
